# agbe

./: .clang-format  .gitignore  .pre-commit-config.yaml  ;  CMakeLists.txt  LICENSE  Makefile  README.md  suppressed_leaks
include/: apu.h  control.h  cpu.h  disassembler.h  emulation.h  input.h  interrupts.h  jump.h  load.h  logic.h  mbc.h  memory.h  ppu.h  ppu_utils.h  prefix.h  queue.h  rendering.h  rotshift.h  save.h  serial.h  sync.h  timers.h  utils.h
include/mbc/: mbc1.h  mbc3.h  mbc5.h  mbc_base.h  no_mbc.h
src/: CMakeLists.txt  apu.c  control.c  cpu.c  disassembler.c  emulation.c  input.c  interrupts.c  jump.c  load.c  logic.c  main.c  mbc.c  memory.c  ppu.c  ppu_utils.c  prefix.c  queue.c  rendering.c  rotshift.c  save.c  serial.c  sync.c  test  test.c  timers.c  utils.c
src/mbc/: mbc1.c  mbc3.c  mbc5.c  mbc_base.c  no_mbc.c
